# liblp

./: .readthedocs.yml  README.md  pyproject.toml
docs/: .gitignore
docs/source/: conf.py  index.rst
liblp/: __init__.py  images.py  liblp.py  partition_opener.py  reader.py  utility.py  writer.py
liblp/include/: __init__.py  builder.py  liblp.py  metadata_format.py  partition_opener.py
liblp/partition_tools/: __init__.py  lpunpack.py
