[tool.poetry]
name = "liblp"
version = "1.0.0"
description = "Android logical partitions library ported from C++ to Python"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/SebaUbuntu/liblp"

[tool.poetry.scripts]
lpunpack = 'liblp.partition_tools.lpunpack:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
