[tool.poetry]
name = "liblp"
version = "1.0.2"
description = "Android logical partitions library ported from C++ to Python"
authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/liblp"

[tool.poetry.scripts]
lpunpack = 'liblp.partition_tools.lpunpack:main'

[tool.poetry.dependencies]
python = "^3.8"
sphinx = { version = ">=5.0.1,<8.0.0", optional = true }
sphinx-rtd-theme = { version = ">=1,<3", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
